manifest/objects/mkto_si__Value__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>mkto_si__DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Double__c</fullName>
        <label>Double</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>mkto_si__Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>mkto_si__Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>mkto_si__String__c</fullName>
        <label>String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__TextArea__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__ValueType__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>TextArea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Value</label>
    <nameField>
        <label>Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>